Add a border around the about page elements

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
         <h1>VINTAGE VISIONARY</h1>
     </header>
 
+    <audio autoplay loop muted>
+        <source src="assets/audio/simple.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <main class="main-content">
         <img class="right" src="https://web.archive.org/web/20090829052409/http://www.geocities.com/sbenzvi/sun_playing_with_beach_ball_md_clr.gif", >
         <!-- <img src='https://web.archive.org/web/20000914020616/http://www.geocities.com:80/SiliconValley/Lab/4976/welcome-gif2.gif'> -->
         <img src="https://web.archive.org/web/20090830112133/http://geocities.com/catlovera/Bear_walks_2.gif">
         <img class="right" src="https://web.archive.org/web/20090726015015/http://www.geocities.com/autograph_cat/a_c_logo3.gif">
-        <p><img src="https://web.archive.org/web/20091020112800/http://hk.geocities.com/karenkayan/b548back.gif"></p>
         <img src="https://web.archive.org/web/20090830052209/http://geocities.com/Hollywood/Studio/5528/clown.gif">
         <img src="https://web.archive.org/web/20091026064154/http://geocities.com/CapeCanaveral/Hangar/2501/images/Funplane.gif">
-        <img class="right" src="https://web.archive.org/web/20091028083441/http://www.geocities.com/pndtpa/poems/a_brownkitty.gif">
     </main>
     
         
