--- a/skills.html
+++ b/skills.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>My Skills</title>
     <link rel="stylesheet" href="assets/css/skills.css">
 </head>
 <body>
-    <p>Skills</p>
-    <li>
-        <ul>HTML</ul>
-        <ul>CSS</ul>
-        <ul>JAVASCRIPT</ul>
-        <ul>PYTHON</ul>
-        <ul>NODE JS</ul>
-        <ul>BOOTSTRAP</ul>
-        <ul>JQUERY</ul>
-    </li>
+    <p> My skills:</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JAVASCRIPT</li>
+        <li>PYTHON</li>
+        <li>NODE JS</li>
+        <li>BOOTSTRAP</li>
+        <li>JQUERY</li>
+    </ul>
     
 </body>
 </html>
