Run a W3Schools html validator

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <p>Yours faithfully,</p>
         <p>Haadiyah</p>
     </div>
-    
+    <img src="">
     <img class="right" src="https://web.archive.org/web/20091026214424/http://geocities.com/carmen_furtado/mail01.gif">
     <br>
     <br>
