--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet">
     <title>Vintage Visionary</title>
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
@@ -19,12 +19,11 @@
     </audio>
 
     <main class="main-content">
-        <img class="right" src="https://web.archive.org/web/20090829052409/http://www.geocities.com/sbenzvi/sun_playing_with_beach_ball_md_clr.gif", >
-        <!-- <img src='https://web.archive.org/web/20000914020616/http://www.geocities.com:80/SiliconValley/Lab/4976/welcome-gif2.gif'> -->
-        <img src="https://web.archive.org/web/20090830112133/http://geocities.com/catlovera/Bear_walks_2.gif">
-        <img class="right" src="https://web.archive.org/web/20090726015015/http://www.geocities.com/autograph_cat/a_c_logo3.gif">
-        <img src="https://web.archive.org/web/20090830052209/http://geocities.com/Hollywood/Studio/5528/clown.gif">
-        <img src="https://web.archive.org/web/20091026064154/http://geocities.com/CapeCanaveral/Hangar/2501/images/Funplane.gif">
+        <img class="right" src="https://web.archive.org/web/20090829052409/http://www.geocities.com/sbenzvi/sun_playing_with_beach_ball_md_clr.gif" alt="sun playing" >
+        <img src="https://web.archive.org/web/20090830112133/http://geocities.com/catlovera/Bear_walks_2.gif" alt="cat gif">
+        <img class="right" src="https://web.archive.org/web/20090726015015/http://www.geocities.com/autograph_cat/a_c_logo3.gif" alt="cat gif">
+        <img src="https://web.archive.org/web/20090830052209/http://geocities.com/Hollywood/Studio/5528/clown.gif" alt="clown gif">
+        <img src="https://web.archive.org/web/20091026064154/http://geocities.com/CapeCanaveral/Hangar/2501/images/Funplane.gif" alt="funplane gif">
         <br>
         <p style="color: aliceblue;">Welcome to my Circus</p>
         <p style="color: aliceblue;">Check out the gifs and read
