--- a/skills.html
+++ b/skills.html
@@ -9,16 +9,23 @@
     <link rel="stylesheet" href="assets/css/skills.css">
 </head>
 <body>
-    <p> My skills:</p>
+ 
+    <h1> My skills:</h1>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>JAVASCRIPT</li>
         <li>PYTHON</li>
-        <li>NODE JS</li>
+        <li>NODE.JS</li>
         <li>BOOTSTRAP</li>
         <li>JQUERY</li>
     </ul>
-    
+    <img src="https://web.archive.org/web/20091026222647/http://www.geocities.com/kissenhouse/cat_black_run.gif">
+
+    <img src="https://web.archive.org/web/20091027091939/http://geocities.com/jojunkfood/goback_bg.gif">
+    <p><a href="about.html">Back</a></p>
+
+    <footer><p>© 1996. All rights reserved.</p></footer>
+
 </body>
 </html>
