Run a W3C CSS validator and correct the errors

--- a/skills.html
+++ b/skills.html
@@ -20,9 +20,9 @@
         <li>BOOTSTRAP</li>
         <li>JQUERY</li>
     </ul>
-    <img src="https://web.archive.org/web/20091026222647/http://www.geocities.com/kissenhouse/cat_black_run.gif">
+    <img src="https://web.archive.org/web/20091026222647/http://www.geocities.com/kissenhouse/cat_black_run.gif" alt="black cat gif">
 
-    <img src="https://web.archive.org/web/20091027091939/http://geocities.com/jojunkfood/goback_bg.gif">
+    <img src="https://web.archive.org/web/20091027091939/http://geocities.com/jojunkfood/goback_bg.gif" alt="go back gif">
     <p><a href="about.html">Back</a></p>
 
     <footer><p>© 1996. All rights reserved.</p></footer>
