--- a/about.html
+++ b/about.html
@@ -33,12 +33,11 @@
         <p>Yours faithfully,</p>
         <p>Haadiyah</p>
     </div>
-    <img src="">
-    <img class="right" src="https://web.archive.org/web/20091026214424/http://geocities.com/carmen_furtado/mail01.gif">
+    <img class="right" src="https://web.archive.org/web/20091026214424/http://geocities.com/carmen_furtado/mail01.gif" alt="girl with back sign gif">
     <br>
     <br>
-    <img class="right" src="https://web.archive.org/web/20091028083441/http://www.geocities.com/pndtpa/poems/a_brownkitty.gif">
-    <p><img src="https://web.archive.org/web/20091020112800/http://hk.geocities.com/karenkayan/b548back.gif"></p>
+    <img class="right" src="https://web.archive.org/web/20091028083441/http://www.geocities.com/pndtpa/poems/a_brownkitty.gif" alt="brown Kitty gif">
+    <p><img src="https://web.archive.org/web/20091020112800/http://hk.geocities.com/karenkayan/b548back.gif" alt="back-sign gif"></p>
     <p><a href="index.html"> &larr;</a></p>
     
     <footer>
