--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img class="right" src="https://web.archive.org/web/20090726015015/http://www.geocities.com/autograph_cat/a_c_logo3.gif" alt="cat gif">
         <img src="https://web.archive.org/web/20090830052209/http://geocities.com/Hollywood/Studio/5528/clown.gif" alt="clown gif">
         <img src="https://web.archive.org/web/20091026064154/http://geocities.com/CapeCanaveral/Hangar/2501/images/Funplane.gif" alt="funplane gif">
+        <img class="right" src="https://web.archive.org/web/20090820100529/http://geocities.com/arkoutdoors/walking.gif" alt="">
         <br>
         <p style="color: aliceblue;">Welcome to my Circus</p>
         <p style="color: aliceblue;">Check out the gifs and read
